--- a/src/components/ListItem/listitem.css
+++ b/src/components/ListItem/listitem.css
@@ -2,8 +2,10 @@
   background-color: #ddd;
   color: #333;
   font-size: 1rem;
+  list-style: none;
   position: relative;
-  padding: 1rem 1rem 1rem 2rem;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  margin: 1rem 0;
 }
 .listitem::before {
   content: attr(data-ref);
