--- a/src/components/ListItem/listitem.css
+++ b/src/components/ListItem/listitem.css
@@ -5,7 +5,7 @@
   list-style: none;
   position: relative;
   padding: 0.5rem 0.5rem 0.5rem 1.5rem;
-  margin: 1rem 0;
+  margin: 1rem;
 }
 .listitem::before {
   content: attr(data-ref);
