finished coding routing episode 10

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,5 +1,8 @@
 .mainnav > a {
   color: cornflowerblue;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   margin: 0.2rem 1rem;
+}
+a.activeLink {
+  color: orangered;
 }
