finished coding error fix with useEffect cleanup, conditional render of SearchBar, and scroll restoration

--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 2rem;
 }
 .mainContent > div.results,
 .mainContent > div.details {
